--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -2,6 +2,16 @@ html[theme='dark-mode'] {
   filter: invert(1) hue-rotate(180deg);
 }
 
+/* ul modification */
+
+ul {
+  margin-top: 0;
+}
+
+ul li {
+  margin-top: 0;
+}
+
 body {
   line-height: 1;
   font: normal 15px/1.5em 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -256,8 +266,8 @@ nav.navigation a.button {
 
 .profile .avatar {
   display: inline-block;
-  width: 80px;
-  height: 80px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
 }
 
